# canvas-game-of-life

./: .gitignore  Cargo.toml  build.sh  demo.wasm  index.html  interface.ts  life.js  life.ts  readme.md  style.css  tsconfig.json
src/: data.rs  lib.rs
