[package]
name = "canvas-game-of-life"
version = "0.2.0-demo"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "life"

[profile.release]
lto = true
opt-level = 's'

[dependencies]
oorandom = "11.1.4"
